# rusty

./: .gitignore  README.md
compiler/: .gitignore  Cargo.toml
compiler/examples/: example_1.txt
compiler/src/: another.rs  another_actions.rs  calculator.rs  calculator.rustemo  calculator_actions.rs  compiler.rs  compiler.rustemo  compiler_actions.rs  global_state.rs  main.rs
compiler/src/binding/: binder.rs  bound_assignment.rs  bound_binary_expression.rs  bound_binary_operator.rs  bound_binary_operator_kind.rs  bound_constant_declaration.rs  bound_expression.rs  bound_for_statement.rs  bound_if_statement.rs  bound_kind.rs  bound_literal_expression.rs  bound_scope.rs  bound_statement.rs  bound_statement_list.rs  bound_unary_expression.rs  bound_unary_operator.rs  bound_unary_operator_kind.rs  bound_variable_declaration.rs  bound_while_statement.rs  mod.rs
compiler/src/evaluation/: evaluator.rs
compiler/src/lexical_analyzer/: lexer.rs
compiler/src/reports/: diagnostic.rs  diagnostics.rs  mod.rs  text_place.rs  text_span.rs  text_type.rs
compiler/src/syntax_analyzer/: assignment.rs  binary_expression.rs  constant_declaration.rs  diagnostics.rs  else_statement.rs  for_statement.rs  if_statement.rs  literal_expression.rs  main.rs  mod.rs  name_expression.rs  parenthesized_expression.rs  parser.rs  result_statement.rs  statement_list.rs  unary_expression.rs  variable_declaration.rs  while_statement.rs
compiler/src/syntax_tree/: ast.rs
compiler/src/tests/: integration_testing.rs  mod.rs  unit_testing.rs
compiler/src/util/: expression.rs  literals.rs  mod.rs  (+6 more)
(+23 files in other folders)
