[package]
name = "compiler"
version = "0.1.0"
edition = "2021"


[dependencies]
lazy_static = "1.4" 
colored = "2.1.0"
once_cell = "1.19.0"
regex = { version = "1.10.6", default-features = false, features = ["std", "unicode-perl"] }
rustemo = "0.6.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]